Assets/css/styles.css
* {
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
    padding-left: 10px;
    box-sizing: border-box;
}
:root {
    --Purple: #861cc4;
}

body {
    position: relative;
}

header {
    width: 100%;
    display: flex;
    padding: 20px;
}

a {
    text-decoration: none;
    color: var(--Purple);
    width: 30%;
}

#time {
    width: 60%;
    text-align: right;
    padding-right: 10px;
}

#highscore-link {
    background-color: white);
    border-style: none;
    padding: 5px;
    cursor: pointer;
    margin: 1px;
    
}
h2 {
    padding-bottom: 10px;
}

button:hover {
    opacity: .6;
    border: 4px solid #100ad7;
}

.timer-count {
    width: 10%;
}

/* start quiz section styling */
.start-quiz {
    width: 100%;
    padding: 15px;
    text-align: center;
}

.start-quiz p {
    padding: 15px;
}

/* All button stylings */
.start-quiz button, .question-container button, input[type=submit], .highscores {
 background-color: var(--Purple);
 color: white;
 padding: 5px;
 border-radius: 5px;
 cursor: pointer;
 margin: 1px;
}

.question-container {
    display: flex;
    flex-direction: column;
}

.question-container h2, .question-container form {
    padding-left: 15px;
}

.question-container button {
    width: 30%;
    text-align: left;
}


input {
    width: 50%;
}

input[type=submit] {
    margin: 5px 0;
}
.question-container p, .finish-container p {
    font-size: 16px;
    font-style: italic;
    color: var(--Purple);
    padding: 15px;
}

.finish-container {
    display: none;
}

.highscores {
    display: none;
}

